--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@types/big.js": "^4.0.5",
     "@types/classnames": "^2.2.4",
     "@types/react": "~16.9.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "~16.9.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "react-beautiful-dnd": "^13.0.0"
   }
 }
